@startuml
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

top to bottom direction
left to right direction

hide circle
hide methods

title Domain Model (DM) - UC010
package PatientAggregate {
    class Patient <<root entity>>
    class DateOfBirth <<value object>>
    class Gender <<value object>> {
      MALE, FEMALE
    }
    class MedicalRecordNumber <<value object>>
    note right of MedicalRecordNumber: unique identifier
    class MedicalCondition <<value object>>
    note right of MedicalCondition: optional
    class EmergencyContact <<value object>>
    class AppointmentHistory <<value object>>
    class FullName <<value object>>
    class FirstName <<value object>>
    class LastName <<value object>>
    class ContactInformation <<value object>>
    class PhoneNumber <<value object>>
    class Email <<value object>>
    class DeletionLog <<value object>>
    
}

Patient "1..*" --- "1" FullName : > has
Patient "*" --- "1" DateOfBirth : > born on
Patient "*" --- "1" Gender : > has
Patient "1" --- "1" MedicalRecordNumber : > identified by
Patient "1" --- "1" ContactInformation : > has
Patient "0..*" --- "0..*" MedicalCondition : > can have
Patient "*" ---"1" EmergencyContact : > has
Patient "1" --- "1" AppointmentHistory : > has
Patient "*" -- "1" DeletionLog : > has

FullName "1" -- "1" FirstName : > has
FullName "1" -- "1" LastName : > has

ContactInformation "1" -- "1" PhoneNumber : > has
ContactInformation "1" -- "1" Email : > has

EmergencyContact "1" -- "1" PhoneNumber : > has

@enduml